# JRA-VAN-Client

./: .gitignore  CODE_REVIEW_REPORT.md  INSTALLER_EVALUATION.md  LICENSE  MANIFEST.in  README.md  SETUP_GUIDE.md  SETUP_INSTRUCTIONS.md  check_python.bat  install_windows.py  main.py  main_jra_van.py  pyproject.toml  requirements.txt  run_as_admin.bat  setup.py  setup_windows.py
api/: README.md  cache.py  main.py  requirements.txt  test_connection.py
docs/: 64BIT_SUPPORT_GUIDE.md  JRA-VAN_DATA_SPECIFICATION.md  JVLINK_SETUP_GUIDE.md  README_JRAVAN.md  RECORD_FORMAT_DETAILS.md  STRUCTURE_DOCUMENTATION_PLAN.md  data-acquisition-research.md  jra-van-datalab-implementation-guide.md  jra-van-python-implementation.md
docs/api-design/: API_IMPLEMENTATION_EVALUATION.md  PERFORMANCE_OPTIMIZATION_PLAN.md  REST_API_DESIGN.md  SIMPLIFIED_CACHE_ARCHITECTURE.md
docs/specifications/: CODE_MASTER_SPECIFICATION.md  COMMUNICATION_PROTOCOL_SPECIFICATION.md  DATA_STRUCTURE_SPECIFICATION.md  DATA_TYPE_SPECIFICATION.md  DATA_UPDATE_SPECIFICATION.md  README.md
jravan/: __init__.py  __main__.py  client.py  manager.py  parser.py
setup/: DOWNLOAD_JVLINK.md  apply_registry.bat  create_registry.py  register_jvlink.bat  setup_64bit_support.py  setup_registry_32bit.bat
src/: jvdata_manager.py  jvlink_client.py
tests/: README.md  __init__.py  test_jvlink.py
